Fixed incompatibility with WorldgenPreviewer