@@ -1,0 +1,42 @@
+Mods: {
+	Pings: {
+		Keybinds.PingObjectAtCursor.DisplayName: Ping Object at Cursor
+
+		Configs: {
+			ClientConfig: {
+				DisplayName: Client Config
+
+				CircularParticles: {
+					Label: Circular Particles on Ping Object
+					Tooltip: If particles should circulate around the pinged object
+				}
+
+				Highlight: {
+					Label: Highlight Pinged Object
+					Tooltip: If the object should appear highlighted (similar to the spelunker effect on ores)
+				}
+			}
+
+			ServerConfig: {
+				DisplayName: Server Config
+
+				PingsPerPlayer: {
+					Label: Maximum amount of pings per player
+					Tooltip: Exceeding this limit will delete the oldest ping of that player
+				}
+
+				PingDuration: {
+					Label: The lifetime/duration of a ping
+					Tooltip: In seconds. If max, infinite duration
+				}
+
+				PingCooldown: {
+					Label: Cooldown between pings
+					Tooltip: In seconds
+				}
+			}
+
+			Common.AcceptClientChanges: Only the host of this world can change the config! Do so in singleplayer.
+		}
+	}
+}
